--- a/package.json
+++ b/package.json
@@ -29,12 +29,14 @@
     "next-themes": "^0.2.1",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
+    "papaparse": "^5.4.1",
     "tailwind-merge": "^2.2.0"
   },
   "devDependencies": {
     "@types/node": "^20.11.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
+    "@types/papaparse": "^5.3.14",
     "autoprefixer": "^10.4.0",
     "eslint": "^8.56.0",
     "eslint-config-next": "^14.2.0",
