--- a/package.json
+++ b/package.json
@@ -22,21 +22,23 @@
     "@radix-ui/react-tooltip": "^1.1.3",
     "@supabase/ssr": "^0.1.0",
     "@supabase/supabase-js": "^2.39.0",
+    "@types/puppeteer": "^5.4.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "lucide-react": "^0.344.0",
     "next": "^14.2.0",
     "next-themes": "^0.2.1",
+    "papaparse": "^5.4.1",
+    "puppeteer": "^24.34.0",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
-    "papaparse": "^5.4.1",
     "tailwind-merge": "^2.2.0"
   },
   "devDependencies": {
     "@types/node": "^20.11.0",
+    "@types/papaparse": "^5.3.14",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
-    "@types/papaparse": "^5.3.14",
     "autoprefixer": "^10.4.0",
     "eslint": "^8.56.0",
     "eslint-config-next": "^14.2.0",
