--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "papaparse": "^5.4.1",
     "puppeteer": "^24.34.0",
     "puppeteer-core": "^24.34.0",
+    "@sparticuz/chromium": "^131.0.0",
     "@sparticuz/chromium-min": "^131.0.0",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
